tests/base/invalid/SetElemOf_CompileFail_1.whiley
import whiley.lang.*:*

void System::main([string] args):
    xs = {1,2,3}
    if 1.23 ∈ xs:
        this.out.println(str(1))
